overflow x fix

--- a/src/index.css
+++ b/src/index.css
@@ -257,7 +257,9 @@ a {
 
 @media only screen and (max-width: 760px){
 
-  
+  body {
+    overflow-x: hidden;
+  }
 
   .newgrid {
     grid-template-columns: 1fr 1fr;
